# OptimSem6

./: .gitignore  .gitmodules  CMakeLists.txt  gradient.cpp  gradient.h  gradient.jl  linmethods.cpp  linmethods.h  main.cpp  notes.org  plot.jl  potential.cpp  potential.h  simplex.cpp  simplex.h
inc/: matrix.h  simplex.h  vector.h
libmatrix/: CMakeLists.txt  matrix.cpp  matrix.h  vector.cpp  vector.h
